# caravel_user_project

./: .gitignore  .gitmodules  CARAVEL_USER.md  Dockerfile  Makefile  README.md  apt_requirements.txt  clean_run.sh  fpga.mk  info.yaml  make_synthesis.sh  run_test.sh
.github/: dependabot.yml
caravel-firmware/: CMakeLists.txt
caravel-firmware/src/testcases/io_ports/: CMakeLists.txt  main.c
caravel_firmware/: CMakeLists.txt  README.md
caravel_firmware/src/testcases/: CMakeLists.txt
caravel_firmware/src/testcases/io_ports/: CMakeLists.txt  main.c
caravel_firmware/src/testcases/la_test1/: CMakeLists.txt  main.c
caravel_firmware/src/testcases/la_test2/: CMakeLists.txt  main.c
caravel_firmware/src/testcases/mprj_stimulus/: CMakeLists.txt  main.c
caravel_firmware/src/testcases/wb_port/: CMakeLists.txt  main.c
chisel/: control_logic-main.zip:Zone.Identifier
def/: user_proj_example.def  user_project_wrapper.def
docs/: environment.yml  requirements.txt
fpga/: caravel_fpga.v  emulator.v
gds/: uniqify.sh  uniquify.sh
lef/: counter.lef  counter_option1.lef  counter_option2.lef  openram_testchip.lef  rest_top.lef  sky130_sram_1kbyte_1rw1r_32x256_8.lef  sky130_sram_1kbyte_1rw1r_8x1024_8.lef  sky130_sram_1kbyte_1rw_32x256_8.lef  sky130_sram_2kbyte_1rw1r_32x512_8.lef  sky130_sram_2kbyte_1rw_32x512_8.lef  sky130_sram_4kbyte_1rw1r_32x1024_8.lef  sky130_sram_4kbyte_1rw_32x1024_8.lef  sky130_sram_4kbyte_1rw_64x512_8.lef  sky130_sram_8kbyte_1rw1r_32x2048_8.lef  sky130_sram_8kbyte_1rw_64x1024_8.lef  sram_1rw0r0w_32_1024_sky130.lef  sram_1rw0r0w_32_256_sky130.lef  (+5 more)
(+1123 files in other folders)
